--- a/memo/vue3-backend/package.json
+++ b/memo/vue3-backend/package.json
@@ -2,13 +2,15 @@
   "name": "vue3-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "Memo.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
+    "mariadb": "^3.0.0"
   }
 }
