--- a/memo/vue3-frontend/package.json
+++ b/memo/vue3-frontend/package.json
@@ -17,7 +17,8 @@
     "core-js": "^3.8.3",
     "node-sass": "^7.0.1",
     "sass-loader": "^13.0.0",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
