--- a/memo/vue3-backend/package.json
+++ b/memo/vue3-backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "mariadb": "^3.0.0"
   }
 }
