--- a/memo/vue3-frontend/package.json
+++ b/memo/vue3-frontend/package.json
@@ -28,6 +28,7 @@
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.7",
     "eslint": "^7.32.0",
+    "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "postcss": "^8.4.14",
     "postcss-import": "^14.1.0",
