--- a/memo/vue3-frontend/package.json
+++ b/memo/vue3-frontend/package.json
@@ -8,31 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/vue-fontawesome": "^3.0.0",
-    "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "node-sass": "^7.0.1",
-    "sass-loader": "^13.0.0",
     "vue": "^3.2.13",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "autoprefixer": "^10.4.7",
     "eslint": "^7.32.0",
-    "eslint-plugin-standard": "^5.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "postcss": "^8.4.14",
-    "postcss-import": "^14.1.0",
-    "tailwindcss": "^3.1.3"
+    "prettier": "^2.4.1"
   },
   "eslintConfig": {
     "root": true,
@@ -41,7 +32,8 @@
     },
     "extends": [
       "plugin:vue/vue3-essential",
-      "eslint:recommended"
+      "eslint:recommended",
+      "plugin:prettier/recommended"
     ],
     "parserOptions": {
       "parser": "@babel/eslint-parser"
