--- a/memo/vue3-frontend/package.json
+++ b/memo/vue3-frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "node-sass": "^7.0.1",
     "vue": "^3.2.13",
     "vuex": "^4.0.0"
   },
@@ -19,11 +20,19 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "prettier": "^2.4.1"
+    "postcss": "^8.4.14",
+    "postcss-cli": "^9.1.0",
+    "postcss-import": "^14.1.0",
+    "prettier": "^2.4.1",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.0",
+    "tailwindcss": "^3.1.4",
+    "webpack": "^5.73.0"
   },
   "eslintConfig": {
     "root": true,
@@ -38,7 +47,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "prettier/prettier": "off"
+    }
   },
   "browserslist": [
     "> 1%",
