--- a/memo/vue3-frontend/package.json
+++ b/memo/vue3-frontend/package.json
@@ -54,7 +54,8 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
-      "prettier/prettier": "off"
+      "prettier/prettier": "off",
+      "no-unused-vars": "off"
     }
   },
   "browserslist": [
