--- a/login/frontend/package.json
+++ b/login/frontend/package.json
@@ -47,6 +47,7 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
+      "no-unused-vars": "off",
       "prettier/prettier": [
         "error",
         {
