--- a/memo/frontend/package.json
+++ b/memo/frontend/package.json
@@ -55,7 +55,8 @@
     },
     "rules": {
       "prettier/prettier": "off",
-      "no-unused-vars": "off"
+      "no-unused-vars": "off",
+      "vue/no-multiple-template-root": "off"
     }
   },
   "browserslist": [
