--- a/memo/frontend/package.json
+++ b/memo/frontend/package.json
@@ -8,6 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
     "core-js": "^3.8.3",
     "node-sass": "^7.0.1",
     "vue": "^3.2.13",
@@ -29,6 +34,7 @@
     "prettier": "^2.4.1",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
+    "tailwindcss": "^3.1.4",
     "webpack": "^5.73.0"
   }
 }
