--- a/memo/frontend/package.json
+++ b/memo/frontend/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.8.3",
     "lodash": "^4.17.21",
     "node-sass": "^7.0.1",
+    "postcss": "^8.4.14",
     "vue": "^3.2.13",
     "vue-draggable-next": "^2.1.1",
     "vue-router": "^4.0.3",
